--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -59,6 +59,7 @@
       "flex-layout.col#category-menu",
       "flex-layout.col#spacer",
       "search-bar",
+      "rich-text#pontos",
       "login",
       "minicart.v2"
     ]
