--- a/node-api/package.json
+++ b/node-api/package.json
@@ -10,6 +10,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --exec esr index.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
