Update readme, add rewards counter on mobile

--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -103,6 +103,7 @@
       "drawer",
       "logo#mobile",
       "flex-layout.col#spacer",
+      "reward-points",
       "login",
       "minicart.v2"
     ],
